# ironman

./: .akira.yml  .gitignore  CMakeLists.txt  Package.swift  bower.json  gulpfile.js
App/: main.swift
App/Commands/: CheckListItemsSeeder.swift  NewsSyncer.swift  PoisSeeder.swift  RacesSeeder.swift  RssSeeder.swift  Seeder.swift  TrafficSeeder.swift
App/Controllers/Api/: CheckListController.swift  NewsController.swift  PoisController.swift  RacesController.swift  TrafficItemsController.swift  UserController.swift
App/Controllers/Backend/: DashboardController.swift
App/Models/CheckListItem/: CheckListItem.swift
App/Models/CheckListItems/: CheckListItem.swift
App/Models/ImportantTime/: ImportantTime.swift
App/Models/News/: News.swift
App/Models/Pois/: Poi.swift
App/Models/Races/: Race.swift
App/Models/Rsses/: Rss.swift
App/Models/TrafficItems/: TrafficItem.swift
App/Routes/: RacesRoutes.swift
App/Routes/Api/: CheckListsRoutes.swift  ImportantTimesRoutes.swift  PoisRoutes.swift  RacesRoutes.swift  TrafficItemsRoutes.swift
App/Routes/Backend/: DashboardRoutes.swift
App/Rsses/: Rss.swift  Rsses.swift
App/Services/: FacebookPosts.swift  FacebookPostsRetriever.swift  RssParser.swift  RssRetriever.swift  YoutubeVideoRetriever.swift
Config/: mysql.json
Config/secrets/: facebook.json
Public/css/: app.css  app.css.map
Resources/Assets/sass/: app.scss
Resources/Views/: base.leaf
Resources/Views/dashboard/: index.leaf
Sources/App/: main.swift
Sources/App/Commands/: NewsSyncer.swift  Seeder.swift
Sources/App/Commands/MigrateFromOldDb/: CheckListItemsSeeder.swift  ImportantTimesSeeder.swift  PoisSeeder.swift  RacesSeeder.swift  RssSeeder.swift  TrafficSeeder.swift
Sources/App/Commands/MigrateFromOldDb/Support/: MigrateHelper.swift
Sources/App/Controllers/Api/: ImportantTimesController.swift  NewsController.swift
Sources/App/Models/: CheckListItem.swift  ImportantTime.swift  News.swift  Poi.swift  Race.swift  Rss.swift  TrafficItem.swift
Sources/App/Routes/Api/: CheckListsRoutes.swift  NewsRoutes.swift  RacesRoutes.swift
Sources/App/Services/: FacebookPostsRetriever.swift  RssRetriever.swift
Tests/AppTests/: AppTests.swift
VaporBackend/: bower.json
VaporBackend/Controllers/: BackendUsersController.swift  UsersController.swift
VaporBackend/Models/BackendUsers/: BackendUser.swift
VaporBackend/Models/BackendUsers/BackendUserRoles/: BackendUserRole.swift
VaporBackend/Resources/Assets/Sass/: app.scss
VaporBackend/Resources/Views/Dashboard/: index.leaf
VaporBackend/Resources/Views/Layout/: base.leaf  footer.leaf  header.leaf  sidebar.leaf
VaporBackend/Resources/Views/Layout/Navigation/: navigation-bottom.leaf  navigation-top.leaf  navigation.leaf
VaporBackend/Resources/Views/Users/: edit.leaf  index.leaf
VaporBackend/Routes/: UsersRoutes.swift
VaporBackend/bower_components/tether/: .bower.json
bower_components/tether/: .bower.json
ironman.xcodeproj/: project.pbxproj
ironman.xcodeproj/Configs/: Project.xcconfig
ironman.xcodeproj/GeneratedModuleMap/CLibreSSL/: module.modulemap
ironman.xcodeproj/project.xcworkspace/xcshareddata/: ironman.xcscmblueprint
ironman.xcodeproj/xcshareddata/xcschemes/: ironman.xcscheme  xcschememanagement.plist
ironmanv3.xcodeproj/: project.pbxproj
ironmanv3.xcodeproj/GeneratedModuleMap/CLibreSSL/: module.modulemap
ironmanv3.xcodeproj/xcshareddata/xcschemes/: ironmanv3.xcscheme  xcschememanagement.plist
